--- a/piko/assets/sass/nav.scss
+++ b/piko/assets/sass/nav.scss
@@ -34,7 +34,7 @@ nav button:focus {
 // Fixed navbar
 body > nav {
   z-index: 99;
-  position: rleative;
+  position: relative;
   top: 0;
   right: 0;
   left: 0;
