--- a/piko/layouts/_default/baseof.html
+++ b/piko/layouts/_default/baseof.html
@@ -12,4 +12,14 @@
         {{- partial "footer.html" . -}}
         {{- partial "scripts.html" . -}}
     </body>
+
+<!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '430608');
+</script>
+<!-- End MailerLite Universal -->
 </html>
