--- a/piko/layouts/partials/head.html
+++ b/piko/layouts/partials/head.html
@@ -1,4 +1,6 @@
 <meta charset="UTF-8" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9206010517640619"
+     crossorigin="anonymous"></script>
 <title>
   {{ if .IsHome }}{{ else }}{{ if .Title }}{{ .Title }} | {{ end }}{{ end }}{{
   .Site.Title }}
